--- a/_posts/2021-01-06-pregfreq.md
+++ b/_posts/2021-01-06-pregfreq.md
@@ -33,7 +33,7 @@ Sabemos que las realidades de los distintos países de América Latina y el Cari
 
 **¿Cuándo se abrirá la convocatoria para participar de los programas?**
 
-Nuestro programa cuenta de tres fases. La fase 1 (talleres informativos) se realiza de forma recurrente en base a la demanda por parte de las universidades que forman parte de nuestra población objetivo. La convocatoria para la fase 2 (capacitación) se realiza en diciembre y va de enero a marzo. La fase 3 (mentorías) va de abril a agosto. Las convocatorias para las fases 2 y 3 se realizarán de forma oportuna a través de nuestras redes sociales.
+Nuestro programa cuenta de tres fases. La fase 1 (talleres informativos) se realiza de forma recurrente en base a la demanda por parte de las universidades que forman parte de nuestra población objetivo. La convocatoria para la fase 2 (capacitación) se realiza en diciembre y va de enero a marzo. La fase 3 (mentorías) va de agosto a diciembre. Las convocatorias para las fases 2 y 3 se realizarán de forma oportuna a través de nuestras redes sociales.
 
 **¿Cómo hago para participar como mentor del programa?**
 
