--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -15,6 +15,12 @@ En esta sección, entrevistamos y resaltamos el trabajo de estudiantes de la com
 
 
 **Últimas Actualizaciones:**
+-  [Entrevista a Mayara Felix][voces-mfelix],  Posdoctoral Fellow en la Universidad de Princeton.
+
+[voces-mfelix:   https://econthaki.github.io/voces/2022/11/01/voces_mayara_felix.html
+
+![mfelix]({{site.baseurl}}/assets/images/voces_mayara_felix.jpg)
+
 -  [Entrevista a Jose P. Vasquez][voces-jvasquez],  Profesor Asistente en la London School of Economics.
 
 [voces-jvasquez]:   https://econthaki.github.io/voces/2022/06/01/voces_jose_p_vasquez.html
