--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -17,7 +17,7 @@ En esta sección, entrevistamos y resaltamos el trabajo de estudiantes de la com
 **Últimas Actualizaciones:**
 -  [Entrevista a Mayara Felix][voces-mfelix],  Posdoctoral Fellow en la Universidad de Princeton.
 
-[voces-mfelix:   https://econthaki.github.io/voces/2022/11/01/voces_mayara_felix.html
+[voces-mfelix]:   https://econthaki.github.io/voces/2022/11/01/voces_mayara_felix.html
 
 ![mfelix]({{site.baseurl}}/assets/images/voces_mayara_felix.jpg)
 
