new logo ecomienza23

--- a/_posts/2023-01-12-ecomienza23.md
+++ b/_posts/2023-01-12-ecomienza23.md
@@ -1,14 +1,14 @@
 ---
 layout: post
-title:  "Eco-mienza 2023"
+title:  "Ecomienza 2023"
 author: econthaki
 categories: [Programas]
-image: assets/images/ecomienza-cuadrado.png
+image: assets/images/ecomienza23/ecomienza23.jpeg
 ---
 
 
 
-**¿Qué es Eco-mienza?**
+**¿Qué es Ecomienza?**
 
 Es un programa de formación que tiene como objetivos dotar de herramientas básicas de investigación aplicada a estudiantes de últimos ciclos y recién egresadas de carreras de economía y relacionadas de universidades de Bolivia, Ecuador y Perú. Lo desarrollan BOWEN y EconThaki en esfuerzos conjuntos con IPA, JPAL LAC y profesora/es invitada/os.
 
