--- a/_posts/2021-01-12-ecomienza22.md
+++ b/_posts/2021-01-12-ecomienza22.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Eco-mienza"
+title:  "Ecomienza"
 author: econthaki
 categories: [Programas]
 image: assets/images/ecomienza-cuadrado.png
@@ -8,7 +8,7 @@ image: assets/images/ecomienza-cuadrado.png
 
 
 
-**¿Qué es Eco-mienza?**
+**¿Qué es Ecomienza?**
 
 Es un programa de formación que tiene como objetivos dotar de herramientas básicas de investigación aplicada a estudiantes de últimos ciclos y recién egresadas de carreras de economía y relacionadas de universidades públicas y/o de regiones de Perú. Lo desarrolla EconThaki en esfuerzos conjuntos a IPA, JPAL LAC, y profesora/es invitada/os.
 
