--- a/_posts/2021-01-06-pregfreq.md
+++ b/_posts/2021-01-06-pregfreq.md
@@ -13,7 +13,7 @@ Preguntas frecuentes sobre la organización y nuestras actividades
 
 **¿EconThaki es una ONG?**
 
-Estamos en proceso de convertirnos en ONG a partir del 2022 para poder contar con la posibilidad de recibir donaciones. Comunicaremos nuestra conversión de manera oportuna a través de nuestras redes sociales. Si te interesa donar a nuestra causa, te recomendamos contactarte con nosotros [aquí][contacto-link]
+Estamos en proceso de convertirnos en ONG para poder contar con la posibilidad de recibir donaciones. Comunicaremos nuestra conversión de manera oportuna a través de nuestras redes sociales. Si te interesa donar a nuestra causa, te recomendamos contactarte con nosotros al correo contacto@econthaki.org 
 
 [contacto-link]:   https://econthaki.github.io/contact.html
 
@@ -27,20 +27,21 @@ Sí, la encuesta ha venido siendo difundida desde setiembre del 2021 y lo seguir
 
 Si eres estudiante de pregrado de economía o carreras afines (políticas públicas, ingeniería económica, estadística, etc.), tienes nacionalidad peruana, estás al menos a un año de egresar del pregrado o egresaste a lo más hace 2 años, tienes interés o curiosidad por la academia y cómo hacer investigación en temas de economía y afines, tienes poca o nula exposición al mundo de la investigación cumples con los requisitos para ser parte de los programas que ofreceremos. Sobre todo, alentamos a participapar población subrepresentada en la academia actualmente: estudiantes de universidades públicas, mujeres, de regiones, población indígena y afroperuana, LGTBIQ, personas con discapacidad y víctimas de conflicto armado interno. 
 
-**¿Por qué solo tienen operaciones en Perú?**
+**¿Por qué solo tienen operaciones en Bolivia, Ecuador y Perú?**
 
-Sabemos que las realidades de los distintos países de América Latina y el Caribe son heterogéneas. Comenzaremos operaciones en Perú porque el contenido de los talleres y estrategias para postular al posgrado está acotado para Perú. Esto será así para el primer año de la organización, ciclo 2021-2022. No obstante, buscaremos expandir operaciones para los ciclos venideros.
+Sabemos que las realidades de los distintos países de América Latina y el Caribe son heterogéneas. Durante 2022, comenzamos operaciones en Perú porque el contenido de los talleres y estrategias para postular al posgrado está acotado para este país. Durante el 2023, trabajaremos en Bolivia, Ecuador y Perú tomando en cuenta la cantidad de recursos humanos y organizaciones aliadas con las que contamos y las realidades de cada país.
+
 
 **¿Cuándo se abrirá la convocatoria para participar de los programas?**
 
-Nuestro programa cuenta de tres fases. La fase 1 (talleres informativos) se realiza de forma recurrente en base a la demanda por parte de las universidades que forman parte de nuestra población objetivo. La convocatoria para la fase 2 (capacitación) se realiza en diciembre y va de enero a marzo. La fase 3 (mentorías) va de agosto a diciembre. Las convocatorias para las fases 2 y 3 se realizarán de forma oportuna a través de nuestras redes sociales.
+Nuestro programa cuenta de tres fases. La fase 1 (talleres informativos) se realiza de forma recurrente en base a la demanda por parte de las universidades que forman parte de nuestra población objetivo. La convocatoria para la fase 2 (capacitación) se realiza a inicios de año y va de marzo a junio. La fase 3 (mentorías) va de agosto a diciembre. Las convocatorias para las fases 2 y 3 se realizarán de forma oportuna a través de nuestras redes sociales.
 
 **¿Cómo hago para participar como mentor del programa?**
 
-A partir de Agosto 2022, abriremos convocatoria para participar como mentores. Los requisitos para ser *mentor junior* son: Ser asistente de investigación con al menos 3 años de experiencia o ya haber pasado por un proceso de aplicación al doctorado o ser estudiante de doctorados de economía o afines en los primeros años. Para ser *mentor senior*: ser estudiante del doctorado en Economía o afines con proyectos de investigación propios (últimos años) o ya contar con el grado de Doctor en economía.
+Las convocatorias para ser mentor de los programas se realizan entre julio y agosto de cada año , abriremos convocatoria para participar como mentores. Los requisitos para se *mentor junior* son: Ser asistente de investigación con al menos 3 años de experiencia o ya haber pasado por un proceso de aplicación al doctorado o ser estudiante de doctorados de economía o afines en los primeros años. Para ser *mentor senior*: ser estudiante del doctorado en Economía o afines con proyectos de investigación propios (últimos años) o ya contar con el grado de Doctor en economía.
 
 **¿Cómo hago para participar del equipo de EconThaki?**
 
-En los próximos meses abriremos distintas convocatorias para ser parte del equipo. Vamos a necesitar muchas manos. De todas maneras, si te interesa colaborar con tiempo para la organización, puedes contactarte con nosotros [aquí][contacto-link]
+Si te interesa colaborar con tiempo para la organización, puedes contactarte con nosotros al correo:  contacto@econthaki.org
 
 [contacto-link]:   https://econthaki.github.io/contact.html
