--- a/_posts/2021-01-12-ecomienza22.md
+++ b/_posts/2021-01-12-ecomienza22.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "Ecomienza"
+title:  "Ecomienza 2022"
 author: econthaki
 categories: [Programas]
 image: assets/images/ecomienza-cuadrado.png
