--- a/_posts/2023-01-12-ecomienza23.md
+++ b/_posts/2023-01-12-ecomienza23.md
@@ -54,7 +54,7 @@ Perú:
 
 **¿Cómo postular?**
 
-- Completar este formulario de inscripción hasta el 3 de marzo.
+- Completar [este formulario de inscripción](https://docs.google.com/forms/d/1isJSWJdmwkuHZ9Ltzt537q0Z9AW6dZNxQfzwiDmNG9c/edit) hasta el 3 de marzo.
 
 - Adjuntar tu CV (máx. 2 pags sin documentar)
 
@@ -110,7 +110,7 @@ Los horarios estándar de los módulos son los sábados de 9 am a 12 pm (hora Ec
 
 - [Versión del programa 2022](https://econthaki.github.io/programas/2021/01/12/ecomienza22.html)
 
-Link a  [Preguntas Frecuentes][pregfreq-link]
+Link a [Preguntas Frecuentes][pregfreq-link]
 
 [pregfreq-link]:   https://econthaki.github.io/recursos/2021/01/06/pregfreq.html
 
