--- a/_posts/2021-01-12-ecomienza22.md
+++ b/_posts/2021-01-12-ecomienza22.md
@@ -28,6 +28,7 @@ El programa consta de 8 sesiones teórico-prácticas que se llevarán a cabo una
 
 - Ser parte de una red que promueve la diversidad en la academia
 
+- [Beca para un curso del LSE 2023](http://www.limase.pe/summer-school-2023/) 
  
 
 **¿Qué requisitos debo cumplir?**
