--- a/_posts/2023-01-12-ecomienza23.md
+++ b/_posts/2023-01-12-ecomienza23.md
@@ -3,7 +3,7 @@ layout: post
 title:  "Ecomienza 2023"
 author: econthaki
 categories: [Programas]
-image: assets/images/ecomienza23/ecomienza23.jpeg
+image: assets/images/ecomienza23/ecomienza23.png
 ---
 
 
@@ -54,7 +54,7 @@ Perú:
 
 **¿Cómo postular?**
 
-- Completar [este formulario de inscripción](https://docs.google.com/forms/d/1isJSWJdmwkuHZ9Ltzt537q0Z9AW6dZNxQfzwiDmNG9c/edit) hasta el 3 de marzo.
+- Completar [este formulario de inscripción](https://acortar.link/ecomienza23) hasta el 3 de marzo.
 
 - Adjuntar tu CV (máx. 2 pags sin documentar)
 
