Más descripción en cada entrevistado & LAC

--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -7,28 +7,28 @@ categories: [Voces]
 image: assets/images/shutterstock_1733262980.jpg
 ---
 
-Entrevistas a miembros de la comunidad académica en LAC.
+Entrevistas a miembros de la comunidad académica en América Latina y el Caribe.
 
 ## Voces
 
-En esta sección, entrevistamos y resaltamos el trabajo y trayectoria de miembros de la comunidad latina que cursan - o han terminado - el Doctorado en Economía o ramas afines. Cada mes, habrá una entrevista nueva.
+En esta sección, entrevistamos y resaltamos el trabajo y trayectoria de miembros de la comunidad latina que cursan --o han terminado-- el Doctorado en Economía o ramas afines. Cada mes, habrá una entrevista nueva.
 
 
 **Últimas Actualizaciones:**
--  [Entrevista a Mayara Felix][voces-mfelix],  Posdoctoral Fellow en la Universidad de Princeton.
+-  [Entrevista a Mayara Felix][voces-mfelix], economista brazileña y Posdoctoral Fellow en la Universidad de Princeton.
 
 [voces-mfelix]:   https://econthaki.github.io/voces/2022/11/01/voces_mayara_felix.html
 
 ![mfelix]({{site.baseurl}}/assets/images/voces_mayara_felix.jpg)
 
--  [Entrevista a Jose P. Vasquez][voces-jvasquez],  Profesor Asistente en la London School of Economics.
+-  [Entrevista a Jose P. Vasquez][voces-jvasquez], economista costarricense y Profesor Asistente en la London School of Economics.
 
 [voces-jvasquez]:   https://econthaki.github.io/voces/2022/06/01/voces_jose_p_vasquez.html
 
 ![jvasquez]({{site.baseurl}}/assets/images/voces_jose_p_vasquez.jpg)
 
 
--  [Entrevista a Lucía Torres Frasele][voces-ltorres],  estudiante del doctorado en economía en Syracuse University.
+-  [Entrevista a Lucía Torres Frasele][voces-ltorres], economista peruana y estudiante del doctorado en economía en Syracuse University.
 
 [voces-ltorres]:   https://econthaki.github.io/voces/2022/03/01/voces_lucia_torres.html
 
@@ -36,28 +36,28 @@ En esta sección, entrevistamos y resaltamos el trabajo y trayectoria de miembro
 
 
 
--  [Entrevista a Carolina Vera (Universidad de Arizona)][voces-cvera], estudiante del doctorado y  forma parte de la red llamada BOWEN, Bolivian Women in Economics Network.
+-  [Entrevista a Carolina Vera (Universidad de Arizona)][voces-cvera], economista boliviana y estudiante del doctorado, forma parte de la red llamada BOWEN, Bolivian Women in Economics Network.
 
 [voces-cvera]:   https://econthaki.github.io/voces/2022/02/01/voces-cvera.html
 
 ![cvera]({{site.baseurl}}/assets/images/carolina-vera.jpg)
 
 
--  [Entrevista a Florencia Hnilo (Stanford Econ) y Sebastian Bauer (Stanford GSB)][voces-fs], ambos de Argentina y creadores del blog “Aplicar a un PhD en Economía desde Argentina”
+-  [Entrevista a Florencia Hnilo (Stanford Econ) y Sebastian Bauer (Stanford GSB)][voces-fs], economistas argentinos, ambos de Argentina y creadores del blog “Aplicar a un PhD en Economía desde Argentina”.
 
 [voces-fs]:   https://econthaki.github.io/voces/2021/10/01/voces_fhnilo_sbauer.html
 
 ![fs]({{site.baseurl}}/assets/images/FH-SB.jpg)
 
 
--  [Entrevista a Fabiola Alba][voces-falba], estudiante del doctorado en Economía en la Universidad de Columbia 
+-  [Entrevista a Fabiola Alba][voces-falba], economista peruana y estudiante del doctorado en Economía en la Universidad de Columbia.
 
 [voces-falba]:   https://econthaki.github.io/voces/2021/06/01/voces_falba.html
 
 ![falba]({{site.baseurl}}/assets/images/Fabiola-Alba.jpg)
 
 
--  [Entrevista a Alex Carrasco][voces-acarrasco], estudiante del PhD en MIT 
+-  [Entrevista a Alex Carrasco][voces-acarrasco], economista peruano y estudiante del PhD en economía en el MIT. 
 
 [voces-acarrasco]:   https://econthaki.github.io/voces/2021/09/01/voces_acarrasco.html
 
