More links & details

--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -10,21 +10,20 @@ output:
   pdf_document: default
 ---
 
-Recursos útiles sobre el camino hacia el PhD y la academia
+Recursos útiles sobre el camino hacia el PhD y la academia.
 
 **Recursos**
 
-En internet hay bastante información desperdigada en varios temas de interés. Te recomendamos seguir #EconTwitter. A continuación algunos recursos que consideramos útiles para diversos tramos del camino (o Thaki) de la investigación en economía/Ph.D.
+En internet hay bastante información desperdigada en varios temas de interés. Una búsqueda de #EconTwitter en Twitter es muy recomendable. A continuación, algunos recursos que consideramos útiles para diversos tramos del camino (o **Thaki**) de la investigación en economía y el doctorado.
 
-## Pre-doctoral fellowships y RA positions:
+## Posiciones de asistentes de anvestigación (RA) y Pre-Docs:
  
 - [Alvin Christian - Applying to Pre-Doc Memo](https://drive.google.com/file/d/1I9JNsSxgB-SylucSULGs-5biOwxyGhAu/view)
 - [Pathways to Research and Doctoral Careers](https://predoc.org/)
 - [Predoctoral Program in Policy](https://www.policypredoc.org/)
 - [EconJobMarket - Research Assistant and Pre-Doc market listings](https://econjobmarket.org/market)
 - [NBER Career Resources](https://www.nber.org/career-resources)
-- Prestar atención a convocatorias en Twitter: @[econ_ra](https://twitter.com/econ_ra) @[econ_jobs_peru](https://twitter.com/econ_jobs_peru)
-
+- Prestar atención a convocatorias en Twitter: @[econ_ra](https://twitter.com/econ_ra) y @[econ_jobs_peru](https://twitter.com/econ_jobs_peru)
 
 ## Materiales para ser buen asistente de investigación
 
@@ -32,7 +31,7 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [J-PAL Resources](https://www.povertyactionlab.org/research-resources?view=toc)
 - [IPA Github](https://povertyaction.github.io/)
 - [DIME Wiki - World Bank](https://dimewiki.worldbank.org/)
-- [Causal Inference – The mixtape](https://mixtape.scunning.com/index.html)
+- [Serie de Cursos de Inferencia Causal](https://www.mixtapesessions.io/sessions/)
 
 ## Consejos y materiales para programación
 
@@ -47,6 +46,7 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [Econometrics with R](https://www.econometrics-with-r.org/)
 - [Intro a STATA (Baum, 2021)](http://fmwww.bc.edu/GStat/docs/IntroStata.pdf)
 - [The STATA Guide](https://medium.com/the-stata-guide)
+- [QuantEcon](https://quantecon.org/)
 
 ## Redacción científica en LaTeX
 
@@ -132,13 +132,13 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [World Economics and Politics Dataverse](https://dss.princeton.edu/catalog/resource3278)
 - [Sebastian Tello Trillo's Dataset Compilation](https://sebastiantellotrillo.com/resources/primer-where-to-find-data)
 
-## Cursos de matemática
+## Cursos de matemáticas
 
 - [Columbia MA Math Camp](https://cesarbarilla.github.io/Columbia-MA-Math-Camp-2021/)
 - [UC Berkeley PhD Math Camp](https://eml.berkeley.edu/~cshannon/e204_19.html)
 - [Yale PhD Math Camp](https://economics.yale.edu/graduate/math-camp-notes )
 - En caso desees certificación formal: [Harvard Extension School - Math Course Catalog](https://courses.extension.harvard.edu/course-catalog/courses?keyword=math)
-- [Curso Libre de Análisis Real en la Universidad de los Andes](https://educacioncontinua.uniandes.edu.co/es/programas/analisis-real) 
+- [Análisis real con aplicaciones en economía](https://www.bogotasummerschoolineconomics.co/cursos-summer/analisis-real/) 
 
 ## Cursos de economía y relacionados
 
@@ -146,7 +146,9 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [Curso de microeonometría aplicada](https://mauricio-romero.com/teaching/microeconometria-aplicada-otono-2021/) - del Prof. Mauricio Romero (ITAM), en español
 - [PREDOC Summer Course in Social Science Analytics](https://predoc.org/events/predoc-summer-2021) 
 - [RI-EF Summer School in Economics and Finance (SSEF)](https://ri-ef.com/ssef/) 
-- [Lima Summer School of Economics](http://www.limase.pe/summer-school-2022/) 
+- [Lima Summer School of Economics](http://www.limase.pe/summer-school-2023/)
+- [Bogotá Summer School of Economics](https://www.bogotasummerschoolineconomics.co/)
+- [Barcelona Summer School of Economics](https://bse.eu/study/summer-school)
 
 ## Testimonios y consejos profesionales
 
@@ -161,10 +163,11 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [Claes Backman - Tips for PhD Students](https://sites.google.com/view/claesbackman/tips-for-phd-students)
 - [Shanjun Li - PhD Resources](http://li.dyson.cornell.edu/phdRes.php) **Prestar bastante atención a los recursos de salud mental**
 
-## Recomendaciones sobre la vida académica en Economía
+## Podcast de investigación en economía y sobre la vida académica
 
 - [The Hidden Curriculum (Podcast)](https://podcasts.apple.com/us/podcast/the-hidden-curriculum/id1526729667)
-
+- [InequaliTalks](https://inequalitalks.fireside.fm/)
+- [EconTalk](https://www.econtalk.org/)
 
 ## Oportunidades de financiamiento
 
