Add AEA cont. ed.

--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -149,6 +149,7 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [Lima Summer School of Economics](http://www.limase.pe/summer-school-2023/)
 - [Bogotá Summer School of Economics](https://www.bogotasummerschoolineconomics.co/)
 - [Barcelona Summer School of Economics](https://bse.eu/study/summer-school)
+- [AEA Continuing Education](https://www.aeaweb.org/conference/cont-ed)
 
 ## Testimonios y consejos profesionales
 
