--- a/_posts/2021-01-05-acercade.md
+++ b/_posts/2021-01-05-acercade.md
@@ -6,11 +6,10 @@ categories: [acercade]
 image: assets/images/logo_hq.png
 featured: true
 ---
-Sobre EconThaki
 
 **Acerca de nosotros**
 
-EconThaki es una organización que tiene como objetivo incrementar la diversidad en la academia en economía y en políticas públicas en Latinoamérica y el Caribe.  Nos llamamos “EconThaki” uniendo Econ- por economía y -Thaki por sendero o camino en aymara. Creemos que incentivar la diversidad en economía es necesario. No solamente por una cuestión de equidad, sino también para aumentar la calidad y el alcance de la disciplina. Tenemos la seguridad de que la inclusión de personas de diferentes orígenes, perspectivas y habilidades significarán avances en las áreas que es capaz de cubrir la profesión y en la calidad de herramientas que tendrá para hacerlo.
+EconThaki es una organización que tiene como objetivo incrementar la diversidad en la academia en economía y en políticas públicas en Latinoamérica y el Caribe.  Nos llamamos “EconThaki” uniendo **Econ**, por economía y **Thaki**, por camino o sendero en aymara. Creemos que incentivar la diversidad en economía es necesario. No solamente por una cuestión de equidad, sino también para aumentar la calidad y el alcance de la disciplina. Tenemos la seguridad de que la inclusión de personas de diferentes orígenes, perspectivas y habilidades significarán avances en las áreas que es capaz de cubrir la profesión y en la calidad de herramientas que tendrá para hacerlo.
 
 **Nuestro logo**
 
@@ -78,7 +77,7 @@ Apoyar al talento e impulsar la diversidad para potenciar la cultura de la inves
     <td><img src="{{ site.baseurl }}/assets/images/johar.PNG"  alt="1" width = 300px height = 600px ></td>
   </tr> 
   <tr>
-    <td>Johar es economista de la UNSAAC, es apasionado del café y la pizza cusqueña . Su cuenta de Twitter es: <a href="https://twitter.com/joharcassa"> @joharcassa</a>
+    <td>Johar es economista de la UNSAAC, es apasionado del café y la pizza cusqueña. Su cuenta de Twitter es: <a href="https://twitter.com/joharcassa"> @joharcassa</a>
     </td>
   </tr>    
 
