Two add. podcasts

--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -169,6 +169,8 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [The Hidden Curriculum (Podcast)](https://podcasts.apple.com/us/podcast/the-hidden-curriculum/id1526729667)
 - [InequaliTalks](https://inequalitalks.fireside.fm/)
 - [EconTalk](https://www.econtalk.org/)
+- [Ceteris Paribus Podcast de Economía](https://open.spotify.com/show/6VjhgYv0wB0e19sIhWnGw4)
+- [Probable Causation](https://www.probablecausation.com/index)
 
 ## Oportunidades de financiamiento
 
