Add "Coding for Economists"

--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -47,6 +47,7 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [Intro a STATA (Baum, 2021)](http://fmwww.bc.edu/GStat/docs/IntroStata.pdf)
 - [The STATA Guide](https://medium.com/the-stata-guide)
 - [QuantEcon](https://quantecon.org/)
+- [Coding for Economists por Ljubica Ristovska](https://scholar.harvard.edu/files/ristovska/files/coding_for_econs_20190221.pdf)
 
 ## Redacción científica en LaTeX
 
