"Find Economic Articles with Data" added

--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -133,6 +133,9 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [World Economics and Politics Dataverse](https://dss.princeton.edu/catalog/resource3278)
 - [Sebastian Tello Trillo's Dataset Compilation](https://sebastiantellotrillo.com/resources/primer-where-to-find-data)
 
+## Artículos y bases de datos para replicar
+- [Find Economic Articles with Data](https://ejd.econ.mathematik.uni-ulm.de/)
+
 ## Cursos de matemáticas
 
 - [Columbia MA Math Camp](https://cesarbarilla.github.io/Columbia-MA-Math-Camp-2021/)
