--- a/_posts/2021-01-05-recursos.md
+++ b/_posts/2021-01-05-recursos.md
@@ -48,6 +48,7 @@ En internet hay bastante información desperdigada en varios temas de interés. 
 - [The STATA Guide](https://medium.com/the-stata-guide)
 - [QuantEcon](https://quantecon.org/)
 - [Coding for Economists por Ljubica Ristovska](https://scholar.harvard.edu/files/ristovska/files/coding_for_econs_20190221.pdf)
+- [R for Stata users, DIME Analytics](https://github.com/worldbank/dime-r-training)
 
 ## Redacción científica en LaTeX
 
