New twitter account

--- a/_posts/2021-01-05-acercade.md
+++ b/_posts/2021-01-05-acercade.md
@@ -77,7 +77,7 @@ Apoyar al talento e impulsar la diversidad para potenciar la cultura de la inves
     <td><img src="{{ site.baseurl }}/assets/images/johar.PNG"  alt="1" width = 300px height = 600px ></td>
   </tr> 
   <tr>
-    <td>Johar es economista de la UNSAAC, es apasionado del café y la pizza cusqueña. Su cuenta de Twitter es: <a href="https://twitter.com/joharcassa"> @joharcassa</a>
+    <td>Johar es economista de la UNSAAC, apasionado del café y la pizza cusqueña. Su cuenta de Twitter es: <a href="https://twitter.com/johar_cassa"> @johar_cassa</a>
     </td>
   </tr>    
 
