Add interview - Maria C Araujo

--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -15,6 +15,12 @@ En esta sección, entrevistamos y resaltamos el trabajo y trayectoria de miembro
 
 
 **Últimas Actualizaciones:**
+-  [Entrevista a María Caridad Araujo][voces-maraujo], Jefa de la División de Género y Diversidad del Banco Interamericano de Desarrollo (BID).
+
+[voces-maraujo]:   https://econthaki.github.io/voces/2023/02/01/voces_maria_caridad_araujo.html
+
+![maraujo]({{site.baseurl}}/assets/images/ma_caridad_araujo.JPG)
+
 -  [Entrevista a Mayara Felix][voces-mfelix], economista brazileña y Posdoctoral Fellow en la Universidad de Princeton.
 
 [voces-mfelix]:   https://econthaki.github.io/voces/2022/11/01/voces_mayara_felix.html
