--- a/_posts/2023-01-12-ecomienza23.md
+++ b/_posts/2023-01-12-ecomienza23.md
@@ -4,6 +4,7 @@ title:  "Ecomienza 2023"
 author: econthaki
 categories: [Programas]
 image: assets/images/ecomienza23/ecomienza23.png
+featured: true
 ---
 
 
