Prof Jales interview

--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -15,6 +15,12 @@ En esta sección, entrevistamos y resaltamos el trabajo y trayectoria de miembro
 
 
 **Últimas Actualizaciones:**
+-  [Entrevista a Amilcar Velez][voces-hjales], economista brasileño y Profesor Asociado en la Universidad de Syracuse.
+
+[voces-hjales]:   https://econthaki.github.io/voces/2023/09/01/voces_hugo_jales.html
+
+![hjales]({{site.baseurl}}/assets/images/voces/hugo-jales.jpg)
+
 -  [Entrevista a Amilcar Velez][voces-avelez], economista peruano y candidato a doctor en economía en la Universidad de Northwestern.
 
 [voces-avelez]:   https://econthaki.github.io/voces/2023/07/01/voces_amilcar_velez.html
@@ -40,7 +46,7 @@ En esta sección, entrevistamos y resaltamos el trabajo y trayectoria de miembro
 
 ![maraujo]({{site.baseurl}}/assets/images/ma_caridad_araujo.JPG)
 
--  [Entrevista a Mayara Felix][voces-mfelix], economista brazileña y Posdoctoral Fellow en la Universidad de Princeton.
+-  [Entrevista a Mayara Felix][voces-mfelix], economista brasileña y Posdoctoral Fellow en la Universidad de Princeton.
 
 [voces-mfelix]:   https://econthaki.github.io/voces/2022/11/01/voces_mayara_felix.html
 
