Typo name Prof Jales

--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -15,7 +15,7 @@ En esta sección, entrevistamos y resaltamos el trabajo y trayectoria de miembro
 
 
 **Últimas Actualizaciones:**
--  [Entrevista a Amilcar Velez][voces-hjales], economista brasileño y Profesor Asociado en la Universidad de Syracuse.
+-  [Entrevista a Hugo Jales][voces-hjales], economista brasileño y Profesor Asociado en la Universidad de Syracuse.
 
 [voces-hjales]:   https://econthaki.github.io/voces/2023/09/01/voces_hugo_jales.html
 
