--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -15,6 +15,12 @@ En esta sección, entrevistamos y resaltamos el trabajo y trayectoria de miembro
 
 
 **Últimas Actualizaciones:**
+-  [Entrevista a Marcelo Ortiz Villavicencio][voces-mortiz], economista ecuatoriano y estudiante de doctorado en economía en la Universidad de Emory.
+
+[voces-mortiz]:   https://econthaki.github.io/voces/2024/02/01/voces_marcelo_ortiz.html
+
+![mortiz]({{site.baseurl}}/assets/images/voces/marcelo_ortiz.jpg)
+
 -  [Entrevista a Hugo Jales][voces-hjales], economista brasileño y Profesor Asociado en la Universidad de Syracuse.
 
 [voces-hjales]:   https://econthaki.github.io/voces/2023/09/01/voces_hugo_jales.html
