add Juan David and Rony

--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -15,6 +15,18 @@ En esta sección, entrevistamos y resaltamos el trabajo y trayectoria de miembro
 
 
 **Últimas Actualizaciones:**
+-  [Entrevita a Rony Maximiliano Rodriguez][voces-rony], economista nicaragüense y estudiante de doctorado en Evaluación de Políticas y Programas Educativos en la Universidad de Harvard.
+
+[voces-rony]:   https://econthaki.github.io/voces/2024/07/01/voces_rony_rodriguez.html
+
+![rony]({{site.baseurl}}/assets/images/voces/rony.jpg)
+
+-  [Entrevita a Juan David Hernandez][voces-jdavid], economista colombiano y estudiante de doctorado en economía en la Universidad de California, San Diego.
+
+[voces-jdavid]:   https://econthaki.github.io/voces/2024/04/01/voces_juan_david.html
+
+![jdavid]({{site.baseurl}}/assets/images/voces/juan_david.jpg)
+
 -  [Entrevista a Marcelo Ortiz Villavicencio][voces-mortiz], economista ecuatoriano y estudiante de doctorado en economía en la Universidad de Emory.
 
 [voces-mortiz]:   https://econthaki.github.io/voces/2024/02/01/voces_marcelo_ortiz.html
