--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -15,11 +15,17 @@ En esta sección, entrevistamos y resaltamos el trabajo y trayectoria de miembro
 
 
 **Últimas Actualizaciones:**
+-  [Entrevita a Agostina Brinatti][voces-agostina], economista argentina e investigadora posdoctoral en la Universidad de Yale.
+
+[voces-agostina]:   https://econthaki.github.io/voces/2024/09/01/voces_agostina_brinatti.html
+
+![agostina]({{site.baseurl}}/assets/images/voces/agostina_brinatti.jpeg)
+
 -  [Entrevita a Rony Maximiliano Rodriguez][voces-rony], economista nicaragüense y estudiante de doctorado en Evaluación de Políticas y Programas Educativos en la Universidad de Harvard.
 
 [voces-rony]:   https://econthaki.github.io/voces/2024/07/01/voces_rony_rodriguez.html
 
-![rony]({{site.baseurl}}/assets/images/voces/rony.jpg)
+![rony]({{site.baseurl}}/assets/images/voces/rony.jpeg)
 
 -  [Entrevita a Juan David Hernandez][voces-jdavid], economista colombiano y estudiante de doctorado en economía en la Universidad de California, San Diego.
 
