nueva pestania y nuevo post ecomienza2024
mas una pestania
mas un post
linking ecomienza cohorts

--- a/_posts/2023-01-12-ecomienza23.md
+++ b/_posts/2023-01-12-ecomienza23.md
@@ -105,6 +105,12 @@ Los horarios estándar de los módulos son los sábados de 9 am a 12 pm (hora Ec
 
 - Clausura del programa y presentación de propuestas: 17 de junio 2023
 
+**Desarrollo del programa**
+
+- [Aliados y mentores del Programa](https://econthaki.github.io/programas/2023/07/19/ecomienza23-aliados.html)
+- [Clausura y graduados](https://econthaki.github.io/programas/2023/07/17/ecomienza23-graduados.html)
+
+
 
 **Links adicionales**
 
