--- a/_posts/2024-04-17-ecomienza24.md
+++ b/_posts/2024-04-17-ecomienza24.md
@@ -96,6 +96,10 @@ Perfil: Ser asistente de investigación senior/pre-doc/magister/estudiante de do
 
 Interesadas en conocer más y/o aplicar pueden hacerlo en este [link](https://docs.google.com/forms/d/e/1FAIpQLScB85ciAXptGVcgmu8a0fWBxvSBjB9o1kphZfvuCcIBu7GIMA/viewform) hasta el 31 de julio del 2024.
 
+**Desarrollo del programa**
+
+- [Mentores y Graduados del Programa](https://econthaki.github.io/programas/2022/03/01/ecomienza-aliados.html)
+
 
 **Links adicionales**
 
