--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -15,9 +15,15 @@ En esta sección, entrevistamos y resaltamos el trabajo y trayectoria de miembro
 
 
 **Últimas Actualizaciones:**
--  [Entrevita a Agostina Brinatti][voces-agostina], economista argentina e investigadora posdoctoral en la Universidad de Yale.
+-   [Entrevita a Carolina Concha-Arriagada][voces-carolina], economista chilena y Profesora Asistente en la Universidad de Columbia.
 
-[voces-agostina]:   https://econthaki.github.io/voces/2024/09/01/voces_agostina_brinatti.html
+[voces-carolina]:   https://econthaki.github.io/voces/2025/04/01/voces_carolina_concha_arriagada.html
+
+![carolina]({{site.baseurl}}/assets/images/voces/carolina_concha_arriagada.png)
+
+- [Entrevita a Agostina Brinatti][voces-agostina], economista argentina e investigadora posdoctoral en la Universidad de Yale.
+
+[voces-carolina]:   https://econthaki.github.io/voces/2024/09/01/voces_agostina_brinatti.html
 
 ![agostina]({{site.baseurl}}/assets/images/voces/agostina_brinatti.jpeg)
 
