add link agostina

--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -23,7 +23,7 @@ En esta sección, entrevistamos y resaltamos el trabajo y trayectoria de miembro
 
 - [Entrevita a Agostina Brinatti][voces-agostina], economista argentina e investigadora posdoctoral en la Universidad de Yale.
 
-[voces-carolina]:   https://econthaki.github.io/voces/2024/09/01/voces_agostina_brinatti.html
+[voces-agostina]:   https://econthaki.github.io/voces/2024/09/01/voces_agostina_brinatti.html
 
 ![agostina]({{site.baseurl}}/assets/images/voces/agostina_brinatti.jpeg)
 
