--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -15,6 +15,13 @@ En esta sección, entrevistamos y resaltamos el trabajo y trayectoria de miembro
 
 
 **Últimas Actualizaciones:**
+
+-   [Entrevita a Emilio Colombi][voces-emilio], economista argentino y candidato a doctor en economía en la Universidad de Michigan.
+
+[voces-emilio]:   https://econthaki.github.io/voces/2025/05/01/voces_emilio_colombi.html
+
+![emilio]({{site.baseurl}}/assets/images/voces/emilio_colombi.JPEG)
+
 -   [Entrevita a Carolina Concha-Arriagada][voces-carolina], economista chilena y Profesora Asistente en la Universidad de Columbia.
 
 [voces-carolina]:   https://econthaki.github.io/voces/2025/04/01/voces_carolina_concha_arriagada.html
