Entrevista voces Shirley

--- a/_posts/2021-01-05-voces.md
+++ b/_posts/2021-01-05-voces.md
@@ -15,6 +15,11 @@ En esta sección, entrevistamos y resaltamos el trabajo y trayectoria de miembro
 
 
 **Últimas Actualizaciones:**
+-   [Entrevita a Shirley Redroban][voces-shirley], economista ecuatoriana y candidata a doctora en economía en la Universidad de Maryland.
+
+[voces-shirley]:  https://econthaki.github.io/voces/2025/11/01/voces_shirley_redroban.html
+
+![shirley]({{site.baseurl}}/assets/images/voces/shirley_redroban.jpeg)
 
 -   [Entrevita a Emilio Colombi][voces-emilio], economista argentino y candidato a doctor en economía en la Universidad de Michigan.
 
